--- a/addMusic.html
+++ b/addMusic.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/add.css">
+    <link rel="stylesheet" href="style/load.css">
     <title>Adicionar musicas</title>
 </head>
 <body>
