--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/load.css">
     <title>Anime-Musics</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" />
 </head>
@@ -14,7 +15,9 @@
                 home
             </span>
     </nav>
-
+    <div id="load">
+        <div id="circleLoad"></div>
+    </div>
 
     <div id="animes" class="content">
     </div>
