--- a/index.html
+++ b/index.html
@@ -10,20 +10,39 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" />
 </head>
 <body>
-    <nav onclick="init()">
-            <span class="material-symbols-outlined">
-                home
-            </span>
-    </nav>
     <div id="load">
         <div id="circleLoad"></div>
     </div>
 
-    <div id="animes" class="content">
+
+    <nav >
+        <span class="material-symbols-outlined" onclick="init()" >
+            home
+        </span>
+        <ul>
+            <li>Generos</li>
+            <li>Sobre</li>
+            <li>Contatos</li>
+        </ul>
+    </nav>
+
+    <div id="topHits">
+        <div id="contentTopHits">
+            <div id="cards"></div>
+        </div>
+        <div id="inputsCarousel">
+        </div>
     </div>
-    <div id="animesMusics" class="content">
-    </div>
-    <div id="audio"></div>
+
+
+    <main>
+        <section><h1>Lista de musicas tocando</h1></section>
+        <div id="animes" class="content">
+        </div>
+        <div id="animesMusics" class="content">
+        </div>
+        <div id="audio"></div>
+    </main>
 
     <footer>
         <img src="https://i.pinimg.com/originals/a5/71/ad/a571ad75a1c760bf8f692ef3fcc2b3d3.png" alt="" id="capa">
