--- a/addMusic.html
+++ b/addMusic.html
@@ -57,8 +57,8 @@
         <div id="modalFotoContent" class="contentModal">
             <img src="https://i.pinimg.com/originals/a5/71/ad/a571ad75a1c760bf8f692ef3fcc2b3d3.png" alt="" id="capa">
             <div id="controlsFoto">
-                <input type="file">
-                <input type="button" value="Adicionar Foto" onclick="addFoto()">
+                <input type="file" id="fileImg">
+                <input type="button" value="Adicionar Foto" onclick="addImg()">
             </div>
         </div>
     </div>
