adicionado barra de progresso

--- a/index.html
+++ b/index.html
@@ -47,22 +47,29 @@
     <footer>
         <img src="https://i.pinimg.com/originals/a5/71/ad/a571ad75a1c760bf8f692ef3fcc2b3d3.png" alt="" id="capa">
         <h2 id="nameMusicPlayng">Nenhuma musica está tocando</h2>
-        <div>
-            <button onclick="musicPrev()">
-                <span class="material-symbols-outlined">
-                    skip_previous
-                </span>
-            </button>
-            <button onclick="playAndPause(this)">
-                <span class="material-symbols-outlined">
-                play_arrow
-                </span>
-            </button>
-            <button onclick="musicNext()">
-                <span class="material-symbols-outlined">
-                    skip_next
-                </span>
+        <div id="controlsMusic">
+            <div id="div-btn">
+                <button onclick="musicPrev()">
+                    <span class="material-symbols-outlined">
+                        skip_previous
+                    </span>
+                </button>
+                <button onclick="playAndPause(this)">
+                    <span class="material-symbols-outlined">
+                    play_arrow
+                    </span>
+                </button>
+                <button onclick="musicNext()">
+                    <span class="material-symbols-outlined">
+                        skip_next
+                    </span>
+            </div>
+            <div id="div-time">
+                <input type="range" oninput="setTime(this)" value="0" id="timeMusic" max="100">
+                <p>0:00/0:00</p>
+            </div>
         </div>
+        
         <input type="range" oninput="setvolume(this)" value="50">
     </footer>
 
