--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/load.css">
+    <link rel="stylesheet" href="style/modais.css">
     <title>Anime-Musics</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" />
 </head>
@@ -20,8 +21,8 @@
             home
         </span>
         <ul>
-            <li>Generos</li>
-            <li>Sobre</li>
+            <li onclick="showModalGenres()">Generos</li>
+            <a href="./sobre.html"><li>Sobre</li></a>
             <li>Contatos</li>
         </ul>
     </nav>
@@ -48,6 +49,12 @@
         </div>
         <div id="audio"></div>
     </main>
+
+    <div id="modalGenres" class="modal">
+        <div id="modalGenresContent" class="contentModal">
+            <ul id="listGeneros"></ul>
+        </div>
+    </div>
 
     <footer>
         <div id="infoMusic">
@@ -89,5 +96,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/genres.js"></script>
 </body>
 </html>
