ajeitando a página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -11,11 +11,11 @@
     <div id="content">
         <h1>Sobre a Pagina "Anime-Music"</h1>
         <h2>Uma copia do spotify para estudo de programação</h2>
-        <div>
+        <div id="text">
             <p>Essa página eu fiz para praticar e poder aprender mais sobre Javascript e fireBase, que foi o banco de dados que usei</p>
             <p>Mais explicação de como o site funciona e seus detalhes você encontra no <a href="https://github.com/Ryan-Castro/AnimeMusic#readme">readme</a> em meu <a href="https://github.com/Ryan-Castro">Github</a> </p>
         </div>
     </div>
-    <button><a href="">Voltar para a pagina principal</a></button>
+    <button><a href="./">Voltar para a pagina principal</a></button>
 </body>
 </html>
