--- a/addMusic.html
+++ b/addMusic.html
@@ -22,15 +22,19 @@
         <div id="infoAdd">
             <section id="animeAdd">
                 <h2>Não encontrou Seu Anime?</h2>
-                <input type="text" id="nameAnime" placeholder="Nome do novo anime">
-                <input type="button" onclick="addAnime()" value="adicionar anime">
+                <div>
+                    <input type="text" id="nameAnime" placeholder="Nome do novo anime">
+                    <input type="button" onclick="addAnime()" value="adicionar anime">
+                </div>
             </section>
             
             <section id="characterAdd">
-                <h2>informaçoes Sobre o anime</h2>
-                <input type="button" value="Add Foto" onclick="showFoto()">
-                <input type="button" value="Add Genero">
-                <input type="button" value="Apagar Anime" onclick="showDeletModal()">
+                <h2>Informaçoes Sobre o anime</h2>
+                <div>
+                    <input type="button" value="Add Foto" onclick="showFoto()">
+                    <input type="button" value="Add Genero">
+                    <input type="button" value="Apagar Anime" onclick="showDeletModal()">
+                </div>
             </section>
         </div>
 
